fix: fix home page padding, optimization of the code (more readable and removal of unnecessary lines).

--- a/static site.css
+++ b/static site.css
@@ -17,8 +17,9 @@ body {
 
 main {
     height: 4000px;
-
 }
+
+/*--------------------------NAVIGATION BAR-----------------------------------------*/
 
 .link {
     display: flex;
@@ -31,14 +32,12 @@ main {
 .flex div {
     width: 200px;
     height: 28px;
-
     /*a voir si il faut faire le block blanc comme selui de contact us*/
 }
 
 .navigation-bar {
     height: 84px;
     box-shadow: 0px 8px 20px 5px #00000014;
-
     display: flex;
     font-size: 16px;
     line-height: 20px;
@@ -95,23 +94,18 @@ a {
     margin-left: 150px;
 }
 
+/*------------------------HOME PAGE HEADER-----------------------------------------*/
+
 .HomePageHeader {
-    display: flex;
-    width: 100%;
-    max-width: 1920px;
-    height: 1008px;
-    gap: 480px;
-    margin-top: 300px;
-    margin-right: 150px;
-    margin-left: 150px;
+    padding: 0px 150px;
+    padding-top: 300px;
+    padding-bottom: 200px;
 }
 
 .PageHeaderBackground {
-    width: 100%;
     display: flex;
-    align-items: flex-start;
     justify-content: space-between;
-    box-sizing: border-box;
+    gap: 480px;
 }
 
 .Text-content {
@@ -127,15 +121,12 @@ a {
 .coffee {
     opacity: #FFEEF6 20%;
     border-radius: 200px;
-    margin-right: 150px;
 }
 
 h1 {
-    margin-left: 150px;
     font-size: 76px;
     font-weight: 900;
     line-height: 110px;
-    margin: 0;
 }
 
 .highlight {
@@ -150,6 +141,8 @@ h1 {
     box-shadow: 0px 20px 40px 5px #00000040;
 }
 
+/*--------------------------POWERED BY SECTION-------------------------------------*/
+
 .PoweredBackground {
     max-height: 708px;
     padding: 100px 150px;
@@ -158,6 +151,7 @@ h1 {
     justify-content: space-between;
 }
 
+/*-------H2 H3 H4--------*/
 h2 {
     font-size: 54px;
     font-weight: 700;
@@ -177,6 +171,7 @@ h4 {
     margin-bottom: 20px;
 }
 
+/*-------HIGHLINGHT2--------*/
 .highlight2 {
     position: relative;
     /* Permet de positionner le pseudo-élément par rapport à cet élément */
@@ -202,9 +197,9 @@ h4 {
     /* Couleur du surlignement */
     z-index: -1;
     /* S'assure que la ligne est derrière le texte */
-
 }
 
+/*-------POWERED--------*/
 .Text-content2 {
     display: flex;
     flex-direction: column;
@@ -247,6 +242,8 @@ h4 {
     align-items: center;
 }
 
+/*--------------------------SERVICES LIST SECTION----------------------------------*/
+
 .Text-content-servicesList {
     padding: 100px 150px;
     display: flex;
@@ -286,6 +283,8 @@ h4 {
     margin-right: 647px;
 }
 
+/*--------------------------CRAFT EXPERIENCES-------------------------------------*/
+
 .CraftExperiences {
     padding: 100px 150px;
     display: flex;
@@ -304,7 +303,3 @@ h4 {
 .CustomersJPG {
     border-radius: 1000px;
 }
-
-/*faire le commit une fois revenue de la pause*/
-
-/*ensuite revoir l'espace entre home page et powered by.../
